2023-08-04T01:34:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5757413385 # 666
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-04
* notice: last 14d: unq all: 4 23
* notice: prev accum: outdated-unq outdated-all / unq all: 205 444 / 219 469
* notice: next accum: outdated-unq outdated-all / unq all: 206 446 / 219 469
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-20] / []

2023-08-02T01:24:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5733621119 # 660
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-02
* notice: last 14d: unq all: 4 25
* notice: prev accum: outdated-unq outdated-all / unq all: 204 443 / 219 469
* notice: next accum: outdated-unq outdated-all / unq all: 205 444 / 219 469
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-19] / []

2023-08-01T16:21:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5729327631 # 659
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-01
* notice: last 14d: unq all: 4 26
* notice: prev accum: outdated-unq outdated-all / unq all: 203 442 / 218 468
* notice: next accum: outdated-unq outdated-all / unq all: 204 443 / 219 469
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-07-18] / [2023-08-01]

2023-07-31T16:23:49Z: