@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-04T01:34:20Z",
-  "count_outdated" : 446,
-  "uniques_outdated" : 206,
+  "timestamp" : "2023-08-05T01:25:07Z",
+  "count_outdated" : 448,
+  "uniques_outdated" : 207,
   "count" : 469,
   "uniques" : 219,
   "clones" : [
-    {
-      "timestamp": "2023-07-21T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-22T00:00:00Z",
       "count": 2,
